fixing footer icons light and dark mode

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -42,11 +42,16 @@
     margin: 0 10px;
 }
 .socials a{
+    /* text-decoration: none;
+    color: #fff; */
+    font-size: var(--size-3xl);
     text-decoration: none;
-    color: #fff;
+    color: var(--clr-light);
+    letter-spacing : -0.05em;
+    transition: color 0.3s;
 }
 .socials a i{
-    font-size: 1.1rem;
+    /* font-size: 1.1rem; */
     transition: color .4s ease;
 }
 
